Create zookeeper chroot on cluster configs if the chroot isn't present

--- a/templates/solr.service.j2
+++ b/templates/solr.service.j2
@@ -7,7 +7,7 @@ Type=forking
 PIDFile=/opt/solr/bin/solr-8983.pid
 User=solr
 Group=solr
-ExecStart=/opt/solr/bin/solr start -c {% if not((solr_zookeeper_connect_string is undefined) or (solr_zookeeper_connect_string is none) or (solr_zookeeper_connect_string|trim == '')) %} -z {{ solr_zookeeper_connect_string }} {% endif %} -s {{ solr_home }} -p {{ solr_port }} -m {{ solr_memory }}
+ExecStart=/opt/solr/bin/solr start -c {% if not((solr_zookeeper_connect_string is undefined) or (solr_zookeeper_connect_string is none) or (solr_zookeeper_connect_string|trim == '')) %} -z {{ solr_zookeeper_connect_string }}{{ solr_zookeeper_chroot }} {% endif %} -s {{ solr_home }} -p {{ solr_port }} -m {{ solr_memory }}
 ExecStop=/opt/solr/bin/solr stop -all
 
 [Install]
